--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "toastify": "^2.0.1",
+    "uuid": "^10.0.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
